--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://player.png")
+dock_filesystem_selected_paths=PackedStringArray("res://triangle.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://animated_sprite_2d.tscn")
-center_split_offset=0
+center_split_offset=-234
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 current_scene="res://animated_sprite_2d.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://CharacterBody2DMouvements.gd", "res://Layer1Paralax.gd", "res://Layer 2Paralax.gd", "res://Layer 3Paralax.gd"]
-selected_script="res://Layer1Paralax.gd"
+open_scripts=["res://CharacterBody2DMouvements.gd", "res://CollisionPolygon2D.gd", "res://CollisionShape2D.gd", "res://Layer1Paralax.gd", "res://Layer 2Paralax.gd", "res://Layer 3Paralax.gd", "res://Sprite2D.gd", "res://StaticBody2D.gd"]
+selected_script="res://Sprite2D.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
