--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://obstacles/OBS5.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://obstacles/")
+dock_filesystem_selected_paths=PackedStringArray("res://sceneCredit.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://pressX/", "res://pressB/", "res://pressA/", "res://obstacles/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://obstacle_1.tscn", "res://obstacle_4.tscn", "res://obstacle_5.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://sceneMenu.tscn", "res://sceneCredit.tscn")
 center_split_offset=-130
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-current_scene="res://main.tscn"
-selected_bottom_panel_item=0
+current_scene="res://sceneCredit.tscn"
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://CharacterBody2D.gd", "res://Collectible/feuFollet.gd", "res://feuFolletHaut.gd", "res://Global.gd", "res://main.gd", "res://Obstacle.gd", "res://Obstacle_1_scene.gd", "res://Obstacle_1_sprite.gd", "res://Obstacle_2_scene.gd", "res://Obstacle_3_scene.gd", "res://Obstacle_4_scene.gd", "res://Obstacle_5_scene.gd", "res://obstacle_collision.gd", "res://PointLight2D.gd", "res://pont_bas.gd", "res://pressA.gd", "res://pressB.gd", "res://quitter.gd", "res://rejouer.gd", "res://sceneCredit.gd", "res://sceneMenu.gd"]
-selected_script="res://CharacterBody2D.gd"
+open_scripts=["res://AnimatedSprite2D.gd", "res://CharacterBody2D.gd", "res://Collectible/feuFollet.gd", "res://feuFolletHaut.gd", "res://Global.gd", "res://main.gd", "res://Obstacle.gd", "res://Obstacle_1_scene.gd", "res://Obstacle_1_sprite.gd", "res://Obstacle_2_scene.gd", "res://Obstacle_3_scene.gd", "res://Obstacle_4_scene.gd", "res://Obstacle_5_scene.gd", "res://obstacle_collision.gd", "res://PointLight2D.gd", "res://pont_bas.gd", "res://pressA.gd", "res://pressB.gd", "res://quitter.gd", "res://rejouer.gd", "res://sceneCredit.gd", "res://sceneMenu.gd"]
+selected_script="res://sceneCredit.gd"
 open_help=[]
 script_split_offset=224
 list_split_offset=0
