--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://son/Sonmort.mp3")
+dock_filesystem_selected_paths=PackedStringArray("res://Green Lights.wav")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://son/", "res://pressX/", "res://pressB/", "res://pressA/", "res://obstacles/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://CharacterBody2D.gd"]
-selected_script="res://CharacterBody2D.gd"
+selected_script=""
 open_help=[]
 script_split_offset=224
 list_split_offset=0
