--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Green Lights.wav")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://son/", "res://pressX/", "res://pressB/", "res://pressA/", "res://obstacles/")
+dock_filesystem_selected_paths=PackedStringArray("res://backup5_2.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://CharacterBody2D.gd"]
-selected_script=""
+open_scripts=["res://CharacterBody2D.gd", "res://Fond2-1.gd", "res://Fond2.gd", "res://main.gd", "res://pont.gd", "res://pont_1.gd", "res://pont_2.gd", "res://StaticBody2D2_pont2.gd"]
+selected_script="res://StaticBody2D2_pont2.gd"
 open_help=[]
 script_split_offset=224
 list_split_offset=0
