--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://CharacterBody2D.gd", "res://Fond2-1.gd", "res://Fond2.gd", "res://main.gd", "res://pont.gd", "res://pont_1.gd", "res://pont_2.gd", "res://StaticBody2D2_pont2.gd"]
+open_scripts=["res://CharacterBody2D.gd", "res://feuFolletHaut.gd", "res://Fond2-1.gd", "res://Fond2.gd", "res://Fond3.gd", "res://Fond4-1.gd", "res://Fond4-2.gd", "res://Fond4.gd", "res://Fond5-1.gd", "res://Fond5-2.gd", "res://Fond5.gd", "res://main.gd", "res://pont.gd", "res://pont_1.gd", "res://pont_2.gd", "res://StaticBody2D2_pont2.gd"]
 selected_script="res://StaticBody2D2_pont2.gd"
 open_help=[]
 script_split_offset=224
